# skillbridge-backend

./: .env.example  .gitignore  PDF_IMPLEMENTATION_PLAN.md  README.md  benchmark_extraction.py  interactive_cli.py  main.py  pyproject.toml  regenerate_persona_a.py  regenerate_persona_b.py  requirements.txt  run_persona_b_pipeline.py  setup.sh  test_persona_b_negation.py  test_real_pipeline.py
app/: logging_config.py  main.py  state.py
app/catalog/: esco_lookup.py  loader.py
app/extractor/: extractor.py  file_processor.py  filter.py  groq_mastery.py  holy_grail.md  jobbert_model.py  pdf_utils.py  schemas.py  skillner_model.py  skillsim_model.py
app/pathing/: dag_builder.py  gap_analyzer.py  kahn.py  pathing.py  skill_aligner.py  tracer.py
data/: catalog.json  persona_a_jd.txt  persona_a_resume.txt  persona_b_jd.txt  persona_b_resume.txt
data/processed/: persona_a_diff_output.json  persona_a_extracted_jd.json  persona_a_extracted_resume.json  persona_a_kahn.json  persona_b_diff_output.json  persona_b_extracted_jd.json  persona_b_extracted_resume.json  persona_b_kahn.json
experiments/: test_catalog.py  test_full_pipeline.py  test_jobbert.py  test_kahn.py  test_nlp_pipeline.py  test_skillner.py  test_skillsim.py
tests/: test_endpoints.py  test_gap_analyzer.py  test_jd_extraction.py  test_kahn.py  test_mastery.py
