[project]
name = "skillbridge-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "groq>=1.1.1",
    "networkx>=3.6.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "skillner>=1.0.3",
    "spacy>=3.8.11",
    "transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
