[project]
name = "skillbridge-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asttokens==3.0.1",
    "blis==1.3.3",
    "catalogue==2.0.10",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "cloudpathlib==0.23.0",
    "confection==0.1.5",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.4.3",
    "cymem==2.0.13",
    "decorator==5.2.1",
    "distro==1.9.0",
    "en-core-web-lg",
    "executing==2.2.1",
    "fastapi[standard]==0.135.1",
    "filelock==3.25.2",
    "fsspec==2026.2.0",
    "groq==1.1.1",
    "h11==0.16.0",
    "hf-xet==1.4.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.7.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "ipython==9.11.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jellyfish==1.2.1",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "murmurhash==1.0.15",
    "networkx==3.6.1",
    "nltk==3.9.3",
    "numpy==2.4.3",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.4.5",
    "nvidia-nvtx-cu12==12.8.90",
    "packaging==26.0",
    "pandas==3.0.1",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pip==26.0.1",
    "pluggy==1.6.0",
    "preshed==3.0.12",
    "prompt-toolkit==3.0.52",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "regex==2026.2.28",
    "requests==2.32.5",
    "rich==14.3.3",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "setuptools==82.0.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "skillner==1.0.3",
    "smart-open==7.5.1",
    "sniffio==1.3.1",
    "spacy==3.8.11",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "srsly==2.5.2",
    "stack-data==0.6.3",
    "starlette==0.52.1",
    "sympy==1.14.0",
    "thinc==8.3.11",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torch==2.10.0",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "transformers==5.3.0",
    "triton==3.6.0",
    "typer==0.24.1",
    "typer-slim==0.24.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.42.0",
    "wasabi==1.1.3",
    "wcwidth==0.6.0",
    "weasel==0.4.3",
    "wrapt==2.1.2",
]

[tool.uv.sources]
en-core-web-lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl" }
